<!--
  ~ Created by omrobbie.
  ~ Copyright (c) 2018. All rights reserved.
  ~ Last modified 9/29/17 11:37 AM.
  -->

<resources>
    <string name="app_name">Catalogue Movie</string>
    <string name="hint_search_text">search by movie title</string>
    <string name="title_refresh_menu">Refresh Movie List</string>

    <string name="label_release_date">Release Date</string>
    <string name="label_vote">Vote Average:</string>
    <string name="label_genres">Movie Genres</string>
    <string name="label_overview">Overview</string>
    <string name="label_production_details">Production Details</string>
    <string name="label_belongs">Belongs To Collection</string>
    <string name="label_budget">Budget</string>
    <string name="label_revenue">Revenue</string>
    <string name="label_companies">Companies</string>
    <string name="label_countries">Countries</string>
</resources>
