<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/def_clear_space">

    <com.omrobbie.cataloguemovie.utils.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/def_spacing"
        android:text="@string/label_production_details"
        android:textSize="@dimen/text_jumbo"
        app:font="alanya.regular.ttf" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_poster_belongs"
            android:layout_width="92dp"
            android:layout_height="138dp"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/def_clear_space"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_belongs"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_title_belongs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="@dimen/text_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/def_clear_space"
                android:text="@string/label_budget"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_heading" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/def_clear_space"
                android:text="@string/label_revenue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_revenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_heading" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/def_clear_space"
                android:text="@string/label_companies"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_companies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/def_clear_space" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/def_clear_space"
                android:text="@string/label_countries"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_countries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/def_clear_space" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>