<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:padding="@dimen/def_clear_space">

    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="154dp"
        android:layout_height="231dp"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder"
        android:transitionName="image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/def_clear_space"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_release_date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/def_clear_space">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_vote"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/def_spacing"
                android:textStyle="bold" />
        </LinearLayout>

        <include layout="@layout/detail_rating" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/def_clear_space"
            android:text="@string/label_genres"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/def_clear_space" />

    </LinearLayout>

</LinearLayout>
